fixed header spacing issue and header input bar

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,13 +6,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    padding: 0 1rem;
+
 
     @include tablet {
         flex-direction: row;
         padding: 0 1rem
     }
-    @include desktop{
+
+    @include desktop {
         padding: 0 5rem;
     }
 
@@ -21,10 +23,10 @@
         flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
-       
+
         @include tablet {
             flex-wrap: nowrap;
-            width:  100%;
+            width: 100%;
             justify-content: flex-end;
         }
     }
@@ -42,45 +44,51 @@
         background-image: url(../Assets/Images/Mohan-muruge.jpg);
         background-size: cover;
         order: 2;
-        margin-left: 12px;
+        margin-left: .625rem;
         margin-right: 1rem;
-        @include tablet{
-            
+
+        @include tablet {
+            min-width: 2.5rem;
+            min-height: 2.5rem;
         }
-        
 
         @include tablet {
             max-width: 2.5rem;
             max-height: 2.5rem;
-            order:3;
+            order: 3;
         }
     }
-    &__label{
+
+    &__label {
         display: flex;
-        // padding-left: 1rem;
+
         order: 1;
-        @include tablet{
-            // padding: 0 1rem;
-        }
+
+        @include tablet {}
     }
-    &__input{
+
+    &__input {
         width: 100%;
-        border-radius:  .25rem;
+        border-radius: .25rem;
         border: $Mercury solid .0625rem;
         min-height: 2.5rem;
-        min-width: 15rem;
-        padding-left:1rem;
+        min-width: 12rem;
+        padding-left: 2rem;
         padding-right: 0;
-        background-image: url(../Assets/Icons/search.svg);
-        background-size: cover;
+        background: url(../Assets/Icons/search.svg) no-repeat scroll 7px 8px;
+        @include tablet{
+            margin-right: 1rem;
+            min-width: 13.5rem;
+        }
     }
+    
 
 
     &__button {
         @include lables-buttons;
-        color:  $white;
+        color: $white;
         order: 3;
-        margin: .75rem;
+        margin: 1rem 0;
         display: flex;
         background-color: $brainFlix-Blue;
         border-radius: .25rem;
@@ -89,13 +97,14 @@
         height: 2.5rem;
         align-items: center;
         justify-content: center;
-        @include tablet{
-            order:  2;
+
+        @include tablet {
+            order: 2;
             width: 9.375rem;
         }
     }
-   
-    &__text{
-        width:100% ;
+
+    &__text {
+        width: 100%;
     }
 }
